US5909 - Update to consume ddk styles Style error help-blocks so they align correctly with input + addons.

--- a/assets/stylesheets/components/_forms.scss
+++ b/assets/stylesheets/components/_forms.scss
@@ -194,3 +194,11 @@ input[type="checkbox"]:disabled {
     padding-left: 0;
   }
 }
+
+.custom-input-field {
+  .errors {
+    .help-block {
+      top: 0;
+    }
+  }
+}
